--- a/05_Advection_Diffusion/Advection_Diffusion.tex
+++ b/05_Advection_Diffusion/Advection_Diffusion.tex
@@ -61,11 +61,29 @@
 
 \graphicspath{{graphics/}}
 
-\newcommand{\numolspercm}{$\nu$mols/cm$^{-3}$}
+\newenvironment{itemize*}%
+  {\begin{itemize}%
+    \setlength{\itemsep}{0pt}%
+    \setlength{\parskip}{0pt}}%
+  {\end{itemize}}
+	
+\newenvironment{enumerate*}%
+  {\begin{enumerate}%
+    \setlength{\itemsep}{0pt}%
+    \setlength{\parskip}{0pt}}%
+  {\end{enumerate}}
+	
+	\newenvironment{description*}%
+  {\begin{description}%
+    \setlength{\itemsep}{0pt}%
+    \setlength{\parskip}{0pt}}%
+  {\end{description}}
 
-\title{DRAFT ! Advection, Diffusion \& Reaction Modeling}
+\newcommand{\numolspercm}{$\mu$mols/cm$^{-3}$}
+
+\title{DRAFT! Advection, Diffusion \& Reaction Modeling}
 \author{Marc Los Huertos}
-\date{\today~(ver. 0.47 Wait to read until I get to v .8!)}
+\date{\today~(ver.~0.49 working toward v .8)}
 
 \setsidenotefont{\color{blue}}
 % \setcaptionfont{hfont commandsi}
@@ -92,11 +110,18 @@ The movement of compounds in the environment is driven by two processes, advecti
 \subsection{The Problem}
 
 The fate and transport of compounds in the environment is subject to a complex array of processes (Figure~\ref{fig:dioxaneplume}). However, we can simplify these processes into three subprocesses: 
-advection, diffusion, and reaction. Of course, these processes occur in three dimensions. 
+advection, diffusion, and reaction. Of course, these processes occur in three dimensions but we'll focus on 1D and 2D for this session. 
+
+\begin{marginfigure}
+\centering
+\includegraphics[width=1.0\textwidth]{graphics/Diagram-advection-diffusion.png}
+\caption{A simple diagram of advection and diffusion that inclues how "solutes" might be deposited downwind of a stationary source if air pollution. At the scale analyzed there, the term turbulant diffusion is different than molecular diffusion, but might be modelled in a similar way.}
+\label{fig:advection-diffusion}
+\end{marginfigure}
 
 \begin{figure*}
 \centering
-\includegraphics[width=0.8\textwidth]{graphics/Dioxane_plume.png}
+\includegraphics[width=0.9\textwidth]{graphics/Dioxane_plume.png}
 \caption{A diagram of the major processes that influence the fate and transport of a dioxane plume from a ce in the environment (Source: \url{https://14d-1.itrcweb.org/environmental-fate-transport-and-investigative-strategies/}). 1,4-Dioxane is often referred to as a "forever" compound.}
 \label{fig:dioxaneplume}
 \end{figure*}
@@ -109,17 +134,10 @@ Because these processes are complex and are often difficult to measure, we often
 
 Advection and diffusion are two fundamental processes that govern the transport of solutes in the environment. Advection is the process of transport of a solute by the bulk motion of the fluid. Diffusion is the process of transport of a solute by random molecular motion.
 
-\begin{figure}[h]
-\centering
-\includegraphics[width=0.9\textwidth]{graphics/Diagram-advection-diffusion.png}
-\caption{A simple diagram of advection and diffusion that inclues how "solutes" might be deposited downwind of a stationary source if air pollution. At the scale analyzed there, the term turbulant diffusion is different than molecular diffusion, but might be modelled in a similar way.}
-\label{fig:advection-diffusion}
-\end{figure}
-
 In a simple example, if we have a dose of a solute, like a dye in the center of some media, we'll see it spread out by diffusion (Figure~\ref{fig:diffusion}). If the media is moving, we'll see the dye move with the bulk motion of the media. If the dye reacts with the media, we'll see the dye disappear.
 
 \begin{marginfigure}
-\caption{A simple diagram of 2D diffusion.}
+\caption{A simple diagram of 2D diffusion. To solve these equations, we'll use a numerical approach and descretize the media into a grid. We'll then solve the equations for each grid cell.}
 \label{fig:diffusion}
 \includegraphics[width=1.0\textwidth]{graphics/2D_diffusion.png}
 \end{marginfigure}
@@ -127,12 +145,12 @@ In a simple example, if we have a dose of a solute, like a dye in the center of 
 
 Besides examples we often see with respect to air pollution sources (Figure~\ref{fig:advection-diffusion}), we might think about solutes as pollutants or nutrients. For example, the movement of a nutrient in a river is driven by the bulk motion of the water (advection) and the random motion of the molecules (diffusion) and the reactions that might occur in the water column and sediments (Figure\ref{fig:nutrientspiraling}).
 
-\begin{figure}[h]
+\begin{figure}
 \caption{A simple diagram of advection and nutrient reactions (organic substances and inorganic substances) in a river. Although not shown, you might also think about how diffusion might influence the movement of nutrients in the river and in the sediments.  
 The zone where water moves into the sediment bed is called the hyperreic zone. The porosity of the sediments will allow more advective flow that might influence the reaction capacity of solutes in the sediments.}
 \label{fig:nutrientspiraling}
 \centering
-\includegraphics[width=0.7\textwidth]{graphics/NutrientSpiraling.jpg}
+\includegraphics[width=0.99\textwidth]{graphics/NutrientSpiraling.jpg}
 \end{figure}
 
 
@@ -140,20 +158,21 @@ The zone where water moves into the sediment bed is called the hyperreic zone. T
 
 We will not become experts in advection-diffusion-reaction modeling, but we will become familiar with the processes and the equations that describe them. Moreover, we'll see a bit more about how R can be used to model these processes. After this session, I hope you can do the following:
 
-\begin{enumerate}
+\begin{enumerate*}
 	\item Describe the physical processes of advection and diffusion and solute reaction
 	\item Describe the equations used to model A-D-R. 
 	\item Analyze 1-dimensional movement using advection equations in R.
 	\item Describe diffusion mathematically
 	\item Analyze 1-dimensional adveecton-diffusion using R.
 	\item Appreciate how two-dimensional analysis of advection-diffusion can be modeled in R.
-\end{enumerate}
+\end{enumerate*}
 
 In this session, we'll want to think about the movement of solutes in the porous media, i.e. a soil with air space, sediments with water between the particles. We will refer to the porousity as $\xi$, which is a proportion between 0 and 1. 
 
 \begin{marginfigure}
 \centering
-\includegraphics[width=0.8\textwidth]{graphics/Darcy_permeability.jpg}
+\includegraphics{graphics/Darcy_permeability.jpg}
+\caption{Notice how the porosity of the media can influence the path of the fluid. In ground water, this is measured as permeability and can be used to evaluate the flow chacterstitics in aquifers and oil fields. The permeability is a function of the porosity and the connectivity of the pores.}
 \end{marginfigure}
 
 %We'll start with one-dimensional systems and then move to two-dimensional systems. We'll also consider the effects of reactions on the movement of solutes.
@@ -164,9 +183,7 @@ In this session, we'll want to think about the movement of solutes in the porous
 
 Advection is the transport of a substance by bulk motion. Convection is the transfer of heat by the actual movement of the warmed matter. The equation that are used to describe advection and convection are similar, but the physical processes are different.
 
-
-\newthought{An Equation to Create Anxiety}
-
+\newthought{An Equation that Often Creates Anxiety}
 
 The advection equation is a partial differential equation that describes the movement of a substance in a fluid. The equation is derived from the conservation of mass. The equation is:
 
@@ -176,7 +193,7 @@ The advection equation is a partial differential equation that describes the mov
 - \frac{1}{A_x \xi_x} \cdot \left( \frac{\partial}{\partial x} A_x \cdot \left( -D \cdot \frac{\partial \xi_x C}{\partial x} \right) - \frac{\partial}{\partial x} \left( A_x \cdot v \cdot \xi_x C \right) \right)
 \end{equation}
 
-Here $D$ is the ``diffusion coefficient'', $v$ is the ``advection rate'', and $A_x$ and $\xi$ are the surface area and volume fraction, respectively. 
+Here $D$ is the ``diffusion coefficient'', $\nu$ is the ``advection rate'' (or velocity), and $A_x$ and $\xi$ are the surface area and volume fraction, respectively.\sidenote{What you look at this equation, think about how it makes you feel. It's a bit intimidating, to say the least. But that's only part of the story. I believe these equations, when put in front of is generates anxiety -- and this anxiety can be a barrier to learning. While it's easy to claim we can just put this anxiety away seems to be be a disservice and acknoweldgement of our emotional responses. Before moving forward, let's take a moment to acknowledge the anxiety and see where in your body you are feeling that. Take a deep breath and let it out several times before moving forward.} 
 
 Assuming that A, $\xi$, D and v are constant along x, we can rewrite this in a more general form: 
 
@@ -185,7 +202,7 @@ Assuming that A, $\xi$, D and v are constant along x, we can rewrite this in a m
 D \frac{\partial^2 C}{\partial x^2} - \nu \frac{\partial C}{\partial x}
 \end{equation}
 
-where $u = v/A_x \xi_x$ is the ``velocity'' of the fluid.
+where $\nu = v/A_x \xi_x$ is the ``velocity'' of the fluid.
 
 The movement of compounds in the environment is driven by two processes, advection and diffusion. Of course, these processes occur in three dimensions, but for this class we'll begin with one dimensional processes before getting to more complicated examples.
 
@@ -289,14 +306,13 @@ where $C$ is the concentration of the solute, $t$ is time, $\nu$ is the velocity
 
 The ReacTran package is a collection of functions for modeling solute transport in 1D, 2D, and 3D. The package includes functions for solving the advection-diffusion equation, the advection-diffusion-reaction equation, and the advection-diffusion-reaction equation for multi-phase systems. 
 
-The package also includes functions for solving
+The package also includes functions for solving:
 
-\begin{itemize}
+\begin{itemize*}
 \item Advection-diffusion equations in 1D, 2D, and 3D 
 \item Advection-diffusion-reaction equations in 1D, 2D, and 3D
 \item Advection-diffusion-reaction equations for multi-phase systems
-\end{itemize}
-
+\end{itemize*}
 
 \subsection{Using R as a Modelling Environment to Solve PDEs and ODEs}
 
@@ -315,6 +331,7 @@ We can use R to solve the advection-diffusion equation. The `deSolve` package to
 
 {\ttfamily\noindent\itshape\color{messagecolor}{\#\# Loading required package: shape}}\begin{alltt}
 \hlkwd{library}\hlstd{(deSolve)} \hlcom{# Load the deSolve package}
+\hlkwd{library}\hlstd{(xtable)} \hlcom{# Load the xtable package to help format tables outputs}
 \end{alltt}
 \end{kframe}
 \end{knitrout}
@@ -409,11 +426,33 @@ We can use R to solve the advection-diffusion-reaction equation. The following c
 \end{knitrout}
 
 \subsection{1-D Reaction-Transport Model}
+
+For this example, we will solve the advection-diffusion-reaction equation for a simple one-dimensional case, where the reaction term is given by $R = kC$, and the initial concentration is given by $C(x,0) = 1$ for $x < ?$ and $C(x,0) = 1$ for $x \geq 0.5$. 
+
+
+
+% latex table generated in R 4.2.2 by xtable 1.8-4 package
+% Sun Feb 18 18:13:07 2024
+\begin{table}[ht]
+\centering
+\begin{tabular}{rr}
+  \hline
+ & Value \\ 
+  \hline
+F0 & 1.00 \\ 
+  v & 1.00 \\ 
+  k & 0.10 \\ 
+  D & 0.00 \\ 
+  dx & 1.00 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+
+
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
-\hlstd{parms} \hlkwb{<-} \hlkwd{c}\hlstd{(}\hlkwc{F0} \hlstd{=} \hlnum{1}\hlstd{,} \hlkwc{v}\hlstd{=}\hlnum{1}\hlstd{,} \hlkwc{k} \hlstd{=} \hlnum{0.1}\hlstd{,} \hlkwc{D} \hlstd{=} \hlnum{0}\hlstd{,} \hlkwc{dx} \hlstd{=} \hlnum{1}\hlstd{)}
-
 \hlstd{advModel} \hlkwb{<-} \hlkwa{function}\hlstd{(}\hlkwc{t}\hlstd{,} \hlkwc{C}\hlstd{,} \hlkwc{parms}\hlstd{) \{}
   \hlkwd{with}\hlstd{(}\hlkwd{as.list}\hlstd{(parms), \{}
     \hlstd{Tran} \hlkwb{<-} \hlkwd{tran.1D}\hlstd{(}\hlkwc{C} \hlstd{= C,} \hlkwc{D} \hlstd{= D,} \hlkwc{flux.up} \hlstd{= F0,} \hlkwc{v} \hlstd{= v,} \hlkwc{dx} \hlstd{= dx)}
@@ -443,26 +482,27 @@ We can look at the output, using a simple call of the object, but without more i
 \end{alltt}
 \begin{verbatim}
 ## $y
-##  [1] 0.9090909 0.8264463 0.7513148 0.6830135 0.6209213 0.5644739 0.5131581
-##  [8] 0.4665074 0.4240976 0.3855433 0.3504939 0.3186308 0.2896644 0.2633313
-## [15] 0.2393921 0.2176291 0.1978447 0.1798588 0.1635080 0.1486436 0.1351306
-## [22] 0.1228460 0.1116782 0.1015256 0.0922960
+##  [1] 0.90909091 0.82644628 0.75131480 0.68301345 0.62092132 0.56447393
+##  [7] 0.51315812 0.46650738 0.42409762 0.38554329 0.35049390 0.31863081
+## [13] 0.28966438 0.26333125 0.23939205 0.21762913 0.19784467 0.17985879
+## [19] 0.16350799 0.14864363 0.13513057 0.12284597 0.11167816 0.10152560
+## [25] 0.09229601
 ## 
 ## $Consumption
-##  [1] 0.09090909 0.08264463 0.07513148 0.06830135 0.06209213 0.05644739
-##  [7] 0.05131581 0.04665074 0.04240976 0.03855433 0.03504939 0.03186308
-## [13] 0.02896644 0.02633313 0.02393921 0.02176291 0.01978447 0.01798588
-## [19] 0.01635080 0.01486436 0.01351306 0.01228460 0.01116782 0.01015256
-## [25] 0.00922960
+##  [1] 0.090909091 0.082644628 0.075131480 0.068301345 0.062092132 0.056447393
+##  [7] 0.051315812 0.046650738 0.042409762 0.038554329 0.035049390 0.031863081
+## [13] 0.028966438 0.026333125 0.023939205 0.021762913 0.019784467 0.017985879
+## [19] 0.016350799 0.014864363 0.013513057 0.012284597 0.011167816 0.010152560
+## [25] 0.009229601
 ## 
 ## $flux.up
 ## [1] 1
 ## 
 ## $flux.down
-## [1] 0.092296
+## [1] 0.09229601
 ## 
 ## attr(,"precis")
-## [1] 4.537303e-01 2.595270e-09
+## [1] 3.328335e-01 1.891158e-09
 ## attr(,"steady")
 ## [1] TRUE
 ## attr(,"class")
@@ -479,23 +519,8 @@ Thus, we might be better off plotting the output. I am not sure why the plot fun
 
 \begin{figure*}
 \begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
-\begin{alltt}
-\hlkwd{par}\hlstd{(}\hlkwc{mfrow}\hlstd{=}\hlkwd{c}\hlstd{(}\hlnum{1}\hlstd{,}\hlnum{3}\hlstd{))}
-\hlkwd{plot}\hlstd{(out,} \hlkwc{xlab} \hlstd{=} \hlstr{"X"}\hlstd{,} \hlkwc{ylab} \hlstd{=} \hlstr{"Concentration"}\hlstd{,} \hlkwc{las}\hlstd{=}\hlnum{1}\hlstd{,} \hlkwc{main}\hlstd{=}\hlstr{"Advection-Reaction: Steady State Solution"}\hlstd{)}
-\end{alltt}
-\end{kframe}
-\includegraphics[width=\maxwidth]{figure/unnamed-chunk-7-1} 
-\begin{kframe}\begin{alltt}
-\hlkwd{plot}\hlstd{(out2,} \hlkwc{xlab} \hlstd{=} \hlstr{"X"}\hlstd{,} \hlkwc{ylab} \hlstd{=} \hlstr{"Concentration"}\hlstd{,} \hlkwc{las}\hlstd{=}\hlnum{1}\hlstd{,} \hlkwc{main}\hlstd{=}\hlstr{"Advection-Reaction: Steady State Solution"}\hlstd{)}
-\end{alltt}
-\end{kframe}
-\includegraphics[width=\maxwidth]{figure/unnamed-chunk-7-2} 
-\begin{kframe}\begin{alltt}
-\hlkwd{plot}\hlstd{(out3,} \hlkwc{xlab} \hlstd{=} \hlstr{"X"}\hlstd{,} \hlkwc{ylab} \hlstd{=} \hlstr{"Concentration"}\hlstd{,} \hlkwc{las}\hlstd{=}\hlnum{1}\hlstd{,} \hlkwc{main}\hlstd{=}\hlstr{"Advection-Reaction: Steady State Solution"}\hlstd{)}
-\end{alltt}
-\end{kframe}
-\includegraphics[width=\maxwidth]{figure/unnamed-chunk-7-3} 
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=4in,height=5in]{figure/1D-AdvectionReaction-1} 
 \end{knitrout}
 \end{figure*}
 
@@ -518,8 +543,8 @@ We start with defining the size and porosity of the particle and use R to create
 \centering
 \begin{tabular}{|l|l|c|c|} \hline
 Parameter & Description & Typical Range &  Modelled Value \\ \hline\hline
-\( R \) & Radius of the particle & \( 0.005 - 0.2 \) cm &  0.025 cm \\
-Porosity & Proportion of void space & \(0.005 -- 0.7\) &  0.7 \\ \hline
+\( R \) & Radius of the particle & \( 0.005-0.2 \) cm &  0.025 cm \\
+Porosity & Proportion of void space & \(0.005-0.7\) &  0.7 \\ \hline
 \end{tabular}
 \end{table}
 
@@ -530,13 +555,12 @@ Although we are modeling a one-dimensional system, we will need to create a grid
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
-\hlstd{grid} \hlkwb{<-} \hlkwd{setup.grid.1D}\hlstd{(}\hlkwc{x.up}\hlstd{=}\hlnum{0}\hlstd{,} \hlkwc{L} \hlstd{= R,} \hlkwc{N} \hlstd{= N)}
+\hlstd{grid} \hlkwb{<-} \hlkwd{setup.grid.1D}\hlstd{(}\hlkwc{x.up}\hlstd{=}\hlnum{0}\hlstd{,} \hlkwc{L} \hlstd{= R,} \hlkwc{N} \hlstd{= N)} \hlcom{# Grid definition}
+\hlstd{por.grid} \hlkwb{<-} \hlkwd{setup.prop.1D}\hlstd{(}\hlkwc{value}\hlstd{=por,} \hlkwc{grid}\hlstd{=grid)} \hlcom{# Porosity}
+\hlstd{D.grid} \hlkwb{<-} \hlkwd{setup.prop.1D}\hlstd{(}\hlkwc{value}\hlstd{=D,} \hlkwc{grid}\hlstd{=grid)} \hlcom{# Diffusion coefficient}
 
-\hlstd{por.grid} \hlkwb{<-} \hlkwd{setup.prop.1D}\hlstd{(}\hlkwc{value}\hlstd{=por,} \hlkwc{grid}\hlstd{=grid)}
-\hlstd{D.grid} \hlkwb{<-} \hlkwd{setup.prop.1D}\hlstd{(}\hlkwc{value}\hlstd{=D,} \hlkwc{grid}\hlstd{=grid)}
-
-\hlstd{sphere.surf} \hlkwb{<-} \hlkwa{function}\hlstd{(}\hlkwc{x}\hlstd{)} \hlnum{4}\hlopt{*}\hlstd{pi}\hlopt{*}\hlstd{x}\hlopt{^}\hlnum{2}
-\hlstd{A.grid} \hlkwb{<-} \hlkwd{setup.prop.1D}\hlstd{(}\hlkwc{func}\hlstd{=sphere.surf,}  \hlkwc{grid}\hlstd{=grid)}
+\hlstd{sphere.surf} \hlkwb{<-} \hlkwa{function}\hlstd{(}\hlkwc{x}\hlstd{)} \hlnum{4}\hlopt{*}\hlstd{pi}\hlopt{*}\hlstd{x}\hlopt{^}\hlnum{2} \hlcom{# Surface area of a sphere}
+\hlstd{A.grid} \hlkwb{<-} \hlkwd{setup.prop.1D}\hlstd{(}\hlkwc{func}\hlstd{=sphere.surf,}  \hlkwc{grid}\hlstd{=grid)} \hlcom{# Surface area}
 \end{alltt}
 \end{kframe}
 \end{knitrout}
@@ -675,7 +699,7 @@ It takes about 0.5 second to solve this 10000 state variable model.
 \end{alltt}
 \begin{verbatim}
 ##    user  system elapsed 
-##   0.242   0.023   0.267
+##   0.231   0.027   0.260
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
@@ -689,7 +713,7 @@ The S3 image method is used to generate the steady-state plot.
 \hlkwd{image}\hlstd{(ST3,}\hlkwc{main}\hlstd{=}\hlstr{"2-D diffusion+production"}\hlstd{,} \hlkwc{xlab}\hlstd{=}\hlstr{"x"}\hlstd{,} \hlkwc{ylab}\hlstd{=}\hlstr{"y"}\hlstd{)}
 \end{alltt}
 \end{kframe}
-\includegraphics[width=\maxwidth]{figure/unnamed-chunk-15-1} 
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-16-1} 
 \end{knitrout}
 
 
